--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<script src="board.js"></script>
 	<script src="cell.js"></script>
 	<script src="tile.js"></script>
+	<script src="ResetButton.js"></script>
+	<script src="topText.js"></script>
 
 	<style>
 		body {
