--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="board.js"></script>
 	<script src="cell.js"></script>
 	<script src="tile.js"></script>
-	<script src="ResetButton.js"></script>
+	<script src="resetButton.js"></script>
 	<script src="topText.js"></script>
 
 	<style>
