--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="libraries/p5.sound.js"></script>
 	<script src="sketch.js"></script>
 	<script src="resetButton.js"></script>
+	<script src="TierButton.js"></script>
 	<script src="topText.js"></script>
 	<script src="board.js"></script>
 	<script src="cell.js"></script>
